<resources>
    <string name="app_name">Tag It!</string>
    <string name="search_hint">Search by product name</string>
    <string name="action_share">Share</string>
    <string name="action_review">Add review</string>
    <string name="action_about">About</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Log in</string>
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Pick shop</item>
        <item >Categories</item>
        <item >Search products</item>
        <item >My cart</item>
        <item >My wishlist</item>
    </string-array>
    <string name="title_shop">Shop</string>
    <string name="title_point">Points</string>
    <string name="title_follows">Friendships</string>
    <string name="title_userdata">User data</string>
    <string name="title_badge">Badge detail</string>
    <string name="title_badgelist">Badges list</string>
    <string name="title_reviewlist">Reviews list</string>
    <string name="title_purchaselist">Purchase history</string>
    <string name="title_purchasedetaillist">Purchase details</string>
    <string name="title_product">Product</string>
    <string name="title_brand">Brand detail</string>
    <string name="title_createreview">Create review</string>
    <string-array name="nav_spinner_items">
        <item >Name</item>
        <item >Ascending price</item>
        <item >Descending price</item>
        <item >Brand</item>
        <item >Rating</item>
    </string-array>
    <string name="all_brands">All brands</string>
    <string name="all_categories">All categories</string>
    <string name="list_default">::Select::</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="description_profile_image">Profile image</string>
    <string name="description_product_image">Product image</string>
    <string name="description_empty_image">Empty image</string>
    <string name="profile_points_text">Points</string>
    <string name="profile_followers_text">Followers</string>
    <string name="profile_following_text">Following</string>
    <string name="item_text">item(s)</string>
    <string name="currentshop_text">Current shop</string>
    <string name="shopinfo_text">Shop info</string>
    <string name="nocurrentshopselected_text">No current shop\nselected. Pick a shop\nto check products\navailability.</string>
    <string name="nocurrentshopselected_text2">No current shop selected.</string>
    <string name="noavaialability">There are no available products.</string>
    <string name="identifier">Email</string>
    <string name="email">Email*</string>
    <string name="email2">Email</string>
    <string name="city_name">City*</string>
    <string name="city_name2">City</string>
    <string name="region_name">Region*</string>
    <string name="region_name2">Region</string>
    <string name="country_name">Country*</string>
    <string name="country_name2">Country</string>
    <string name="language_name">Language*</string>
    <string name="language_name2">Language</string>
    <string name="registration_name">Registration</string>
    <string name="nick">Nick*</string>
    <string name="name">Name*</string>
    <string name="name2">Name</string>
    <string name="surname">Surname*</string>
    <string name="surname2">Surname</string>
    <string name="age">Age*</string>
    <string name="age2">Age</string>
    <string name="password">Password*</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="phone">Phone</string>
    <string name="direction">Direction</string>
    <string name="termsconditions">I accept terms and conditions</string>
    <string name="required_fields">* Required fields</string>
    <string name="product_name">Product name</string>
    <string name="price_from">From</string>
    <string name="price_until">since</string>
    <string name="price_coin">€</string>
    <string name="product_price">Price</string>
    <string name="product_finalprice">Final price:</string>
    <string name="product_discount">Discount</string>
    <string name="product_brand">Brand</string>
    <string name="product_category">Category</string>
    <string name="product_rating">Minimum rating</string>
    <string name="product_setrating">Set rating</string>
    <string name="distance">meters</string>
    <string name="pick_email_client">Choose your email client</string>
    <string name="no_email_client">There is no email client installed.</string>
    <string name="won">Won date</string>
    <string name="star">★</string>
    <string name="product_description">Description</string>
    <string name="product_composition">Composition</string>
    <string name="product_color">Colors</string>
    <string name="product_size">Sizes</string>
    <string name="product_size2">Size</string>
    <string name="share">Just watching this amazing product using</string>
    <string name="comment">Comment*</string>
    <string name="shop1">Bought in</string>
    <string name="shop2">on</string>
    <string name="nosizes">Unique size</string>
    <string name="aboutinfo">Joan G. Florit Gomila\nThis app corresponds to the Final Degree Project for Computer Engineering\n2014 (Mallorca)\n\n\"Computer science is no more about computers than astronomy is about telescopes.\" - Dijkstra\n</string>
    <string name="aboutgithub">github.com/joanflo</string>
    <string name="aboutlinkedin">linkedin.com/in/joanflo</string>
    <string name="abouttwitter">twitter.com/joan_flo</string>
    <string name="title_home_search">Search</string>
    <string name="title_home_shop">Shop selection</string>
    <string name="title_home_mycart">My cart</string>
    <string name="title_home_mywishlist">My wishlist</string>
    <string name="title_signin">Sign in</string>
    <string name="title_password">Change password</string>
    <string name="title_login">Log in</string>
    <string name="title_about">About the developer</string>
    <string name="title_advanced_search">Advanced search</string>
    <string name="title_current_shop">Current shop</string>
    <string name="title_profile">Profile</string>
    <string name="title_badges">Badges</string>
    <string name="title_allbadges">All badges</string>
    <string name="title_personalinfo">Personal info</string>
    <string name="title_updatepersonalinfo">Update personal info</string>
    <string name="title_points">Points table</string>
    <string name="title_product_info">Product info</string>
    <string name="title_product_availability">Availability</string>
    <string name="title_product_price">Price</string>
    <string name="title_product_collection">Collection</string>
    <string name="title_product_brand">Brand</string>
    <string name="title_product_related">Related products</string>
    <string name="title_newreview">New review</string>
    <string name="button_profile">My profile</string>
    <string name="button_mywishlist">See wishlist</string>
    <string name="button_mycart">See cart</string>
    <string name="button_pickshop">Pick shop</string>
    <string name="button_unselectshop">Unselect</string>
    <string name="button_seeshop">See shop</string>
    <string name="button_info">Info</string>
    <string name="button_searchcategory">Search by category</string>
    <string name="button_advancedsearch">Advanced search</string>
    <string name="button_search">Search</string>
    <string name="button_skip">Skip</string>
    <string name="button_signin">Sign in</string>
    <string name="button_login">Log in</string>
    <string name="button_terms">See terms</string>
    <string name="button_password">Change password</string>
    <string name="button_seecomments">See comments</string>
    <string name="button_seepurchases">Purchase History</string>
    <string name="button_seeallbadges">See all badges</string>
    <string name="button_modifydata">Modify data</string>
    <string name="button_changepassword">Change password</string>
    <string name="button_update">Update</string>
    <string name="button_addreview">Add review</string>
    <string name="button_seereviews">See reviews</string>
    <string name="button_sendreview">Send review</string>
    <string name="button_seebrand">See brand</string>
    <string name="button_changeshop">Change shop</string>
    <string name="button_checkavailability">Check availability</string>
    <string name="button_addtocart">Add to cart</string>
    <string name="button_addtowishlist">Add to wishlist</string>
    <string name="button_removewish">Remove wish</string>
    <string name="button_removecart">Remove item from cart</string>
    <string name="number5">05</string>
    <string name="number10">10</string>
    <string name="number20">20</string>
    <string name="nfc_beam">Share products with another phone using Android Beam.</string>
    <string name="nfc_settings">Ensure that NFC is enabled</string>
    <string name="nfc_tag">Tap on NFC to add product into shopping cart</string>
    <string name="toast_requiredfields1">All required fields must be filled. Terms and conditions must be accepted.</string>
    <string name="toast_requiredfields2">All required fields must be filled. New password fields must be equals.</string>
    <string name="toast_requiredfields3">All required fields must be filled.</string>
    <string name="toast_problem_shop">Ops! There is not any shop near.</string>
    <string name="toast_problem_request">Ops! An error has occurred with the request to the server.</string>
    <string name="toast_problem_internetconnection">Ops! The internet connection is not available.</string>
    <string name="toast_problem_creatinguser">Ops! There was a problem creating the user. Probably the user already exists.</string>
    <string name="toast_problem_updatinguser">Ops! There was a problem updating the user information.</string>
    <string name="toast_problem_creatingreview">Ops! There was a problem creating the review.</string>
    <string name="toast_problem_empty">Ops! No results were found.</string>
    <string name="toast_problem_productnfc">Ops! There was a problem reading the NFC tag.</string>
    <string name="toast_problem_deleteitem">Ops! There was a problem deleting this item.</string>
    <string name="toast_problem_wishadded">Ops! There was a problem adding this wish into the cart.</string>
    <string name="toast_problem_productaddedcart">Ops! There was a problem adding this product into the cart.</string>
    <string name="toast_problem_creatingwish">Ops! There was a problem adding this product into the wish list.</string>
    <string name="toast_deleteitem">Item deleted successfully.</string>
    <string name="toast_wishadded">Wish added to cart.</string>
    <string name="toast_productaddedcart">Product added to cart.</string>
    <string name="toast_productaddedwish">Product added to wish list.</string>
    <string name="toast_loginfields">Insert user email and password.</string>
    <string name="toast_login">Wrong user or password. Please try again.</string>
    <string name="toast_password">Wrong password. Please try again.</string>
    <string name="toast_password2">Password changed successfully.</string>
    <string name="toast_profile">Select profile image</string>
    <string name="toast_gps">Searching current location.</string>
    <string name="toast_shopselected">Shop selected.</string>
    <string name="toast_registration">You must be registered to perform this action.</string>
    <string name="toast_userupdated">User information updated successfully.</string>
    <string name="toast_reviewcreated">Review created successfully.</string>
</resources>