<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/listview_shop_normal"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:padding="8dp"
	    android:background="@drawable/list_selector" >
        
	    <TextView
	        android:id="@+id/title"
	        style="@style/b"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:textColor="@color/main_white" />
	
	    <TextView
	        android:id="@+id/aux7"
	        style="@style/p"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:text="@string/distance"
	        android:layout_marginTop="15dp"
	        android:textColor="@color/main_white" />
	
	    <TextView
	        android:id="@+id/distance"
	        style="@style/counter1"
	        android:layout_alignBaseline="@+id/aux7"
	        android:layout_toLeftOf="@+id/aux7"
	        android:layout_marginRight="4dp" />
	    
	</RelativeLayout>

    
    <RelativeLayout
        android:id="@+id/listview_shop_pressed"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/grey_light"
	    android:visibility="gone"
    	android:padding="8dp"
	    android:orientation="horizontal" >

        <Button
            android:id="@+id/button_pickshop"
            style="@style/button1"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:text="@string/button_pickshop" />

        <Button
            android:id="@+id/button_seeshop"
            style="@style/button1"
            android:layout_width="100dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:text="@string/button_seeshop" />
    
	</RelativeLayout>

</LinearLayout>